Fix columns on ie and edge

--- a/style.scss
+++ b/style.scss
@@ -128,6 +128,7 @@
 .column--center {
   text-align: center;
   flex: 1 1 auto;
+  width: 100%;
 }
 
 .column--flex,
@@ -136,6 +137,7 @@
   display: flex;
   align-content: center;
   flex-direction: column;
+  width: 100%;
 }
 
 .column--flex,
@@ -482,9 +484,7 @@ p.out-stock {
 }
 
 @media all and (min-width: 769px) {
-  .column--header {
-    width: 50%;
-  }
+ 
   .column__icons {
     width: auto;
     padding-top: 0px;
@@ -533,6 +533,10 @@ p.out-stock {
     align-items: flex-end; 
   }
 
+  .column--header {
+    width: 50%;
+  }
+
   .column,
   .column--center,
   .column--header,
@@ -542,6 +546,7 @@ p.out-stock {
   .column--tight {
     flex: 1 1 auto;
     padding: 20px 20px 0px 20px;
+    width: 50%;
   }
 
 
